# aula09_bootcamp_python

./: etl.py  exemplo.py  exemplo_1.py  logger_exemplo_erros.py  pyproject.toml
