[tool.poetry]
name = "aula09-bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Gilson <gilsoncruz10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
loguru = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
